<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/About"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvWhat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Whatisasmr"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/AsmrDesc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvWho"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/Developer"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvDescDeveloper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:text="@string/AboutDeveloper" />

                <ImageView
                    android:id="@+id/imgDeveloper"
                    android:layout_width="85dp"
                    android:layout_height="89dp"
                    android:layout_margin="2dp"
                    app:srcCompat="@drawable/bonnie" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvFeedbackLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Feedback"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/FeedbackDetail" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etFeedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textMultiLine" />

                <Button
                    android:id="@+id/btnEmail"
                    android:layout_width="88dp"
                    android:layout_height="89dp"
                    android:background="@drawable/email"
                    android:onClick="onClickEmail" />
            </LinearLayout>

            <Button
                android:id="@+id/btnGoBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:onClick="onClickGoBack"
                android:text="@string/go_back" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>