<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstaintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/HowtoUse" />

            <Button
                android:id="@+id/btnOcean"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="@drawable/ocean"
                android:onClick="onClickMusic"
                android:text="@string/Ocean"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btnThunder"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnRain" />

            <Button
                android:id="@+id/btnForest"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="@drawable/forest"
                android:onClick="onClickMusic"
                android:text="@string/Forest"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btnAbout"
                app:layout_constraintLeft_toRightOf="@+id/btnThunder"
                app:layout_constraintRight_toRightOf="parent" />

            <Button
                android:id="@+id/btnThunder"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="@drawable/thunderstorm"
                android:onClick="onClickMusic"
                android:text="@string/Thunder"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btnAbout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/btnForest" />

            <Button
                android:id="@+id/btnFire"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="@drawable/campfire"
                android:onClick="onClickMusic"
                android:text="@string/Fire"
                android:textColorHighlight="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btnBamboo"
                app:layout_constraintLeft_toRightOf="@+id/btnRain"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnBamboo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="@drawable/bambooforest"
                android:onClick="onClickMusic"
                android:text="@string/BambooFlute"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@+id/btnOcean"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnFire" />

            <Button
                android:id="@+id/btnRain"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="@drawable/rain"
                android:onClick="onClickMusic"
                android:text="@string/Rain"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btnOcean"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/btnFire"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnReport"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:background="@color/colorPrimaryDark"
                android:onClick="onClickReport"
                android:text="@string/YouAreListeningTo" />

            <Button
                android:id="@+id/btnAbout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:background="@color/colorPrimaryDark"
                android:onClick="onClickAbout"
                android:text="@string/About"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="158dp"
                tools:layout_editor_absoluteY="445dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
